uptimekuma-app/uptimekuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma-service
  annotations:
    {}
  labels:
    {}
  namespace: uptimekuma
spec:
  selector:
    app: speedtest
  ports:
    - name: uptimekumaport
      port: 3001
      protocol: TCP
      targetPort: 3001
  sessionAffinity: None
  type: NodePort
__clone: true
