uptimekuma-app/uptimekuma-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  annotations:
    {}
  labels:
    {}
  namespace: uptimekuma
spec:
  ingressClassName: nginx2
  rules:
      host: uptime.homelab.us
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3001
                name: uptimekuma-service
            path: /
            pathType: Prefix
  tls:
  backend:
    {}
__clone: true
cacheObject:
  useNestedBackendField: true
  showPathType: true
